<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">The Elements</string>
    <string name="sand_prompt">How to react with sand:</string>
    <string name="water_prompt">How to react with water:</string>
    <string name="wall_prompt">How to react with wall:</string>
    <string name="plant_prompt">How to react with plant:</string>
    <string name="fire_prompt">How to react with fire:</string>
    <string name="ice_prompt">How to react with ice:</string>
    <string name="oil_prompt">How to react with oil:</string>
    <string name="magma_prompt">How to react with magma:</string>
    <string name="stone_prompt">How to react with stone:</string>
    <string name="C4_prompt">How to react with C4:</string>
    <string name="C4plus_prompt">How to react with C4++:</string>
    <string name="Fuse_prompt">How to react with fuse:</string>
    <string name="DestructableWall_prompt">How to react with destructable wall:</string>
    <string name="Acid_prompt">How to react with acid:</string>
    <string name="Steam_prompt">How to react with steam:</string>
    <string name="Salt_prompt">How to react with salt:</string>
    <string name="SaltWater_prompt">How to react with salt water:</string>
    <string name="Glass_prompt">How to react with glass:</string>
    <string name="CustomEle_prompt">How to react with custom element:</string>
    <string name="Mud_prompt">How to react with mud:</string>
    <string name="explonesstext">Explosiveness:</string>
    <string name="redtext">Redness:</string>
    <string name="bluetext">Blueness:</string>
    <string name="greentext">Greeness:</string>
    <string name="densitytext">Density:</string>
    <string name="reaction_prompt">Select Reaction Type?</string>
<string name="app_intro">&lt;font color=&quot;white&quot;&gt;&lt;b&gt;Welcome to The Elements!&lt;/b&gt;&lt;br/&gt;&lt;br/&gt; With Custom Elements we give you the power to make what you want! Be sure to check out the new Space world, a simulation of a proper gravity field with placeable sources and sinks. Finally, please email idkjava@gmail.com with any bugs you may find.&lt;/font&gt;</string>
<string name="brush_size_picker">Brush Size Picker</string>
<string name="element_picker">Palette</string>
<string name="proceed">Proceed</string>
<string name="exit">Exit</string>
<string name="about_text">The Elements is created by IDKJava, Copyright 2010 - 2015\n\nSome icons by Momenticons.\nWorld icons designed by Freepik.</string>
<string name="how_to_play_title">How to Play The Elements</string>
<string name="start_game_button">Play Game</string>
<string name="how_to_play_button">How to Play</string>
<string name="about_button">About</string>
<string name="custom_elements_button">Custom Elements</string>
<string name="preferences_button">Preferences</string>
    <string name="unlock_game_features">Unlock Game Features</string>
<string name="sdcard_not_found">Warning: SD Card inaccessible. You will not be able to save or load.</string>
<string name="eraser">Eraser</string>
<string name="clear_screen">Clear Screen</string>
<string name="play_pause">Play/Pause</string>
<string name="load">Load</string>
<string name="preferences">Preferences</string>
    <string name="loading">Loading...</string>
<string name="update_now">Update Now!</string>
<string name="remind_later">Remind Later</string>
<string name="skip_version">Skip This Version</string>
<string name="update_avail">A new version of The Elements is available now on the play store!</string>
<string name="rate_prompt">Enjoying "The Elements"? Rate us!</string>
    <string name="rate">Rate</string>
<string name="couldnt_launch_market">Sorry, looks like you don\'t have the Google Play store installed.</string>
    <string name="title_activity_purchase" translatable="false">PurchaseActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="purchasing">Purchasing...</string>

    <string name="tool_button_text">Tools</string>
    <string name="util_button_text">Utils</string>
    <string name="record_button_text">Record</string>

    <string name="brush_tool">Brush</string>
    <string name="zoom_tool">Zoom/Pan</string>
    <string name="make_black_hole">Make Black Hole</string>
    <string name="make_white_hole">Make White Hole</string>
    <string name="make_curl_hole">Make Curl Hole</string>
    <string name="null_gravity_zone">Null Gravity Zone</string>
    <string name="remove_gravity_object">Remove Gravity Object</string>
    <string name="trails_on">Enable Trails</string>
    <string name="trails_off">Disable Trails</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="watch_videos">Watch Videos</string>

    <string name="select_world">Select World</string>

    <string name="earth_world">Earth</string>
    <string name="space_world">Space</string>
    <string name="space_world_purchase">Buy Space World: </string>
    <string name="space_world_owned">Space World: OWNED!</string>
    <string name="space_world_owned_error">Error: You already own the space world!</string>
    <string name="space_world_not_owned_error">Error: You do not own the space world!</string>
    <string name="item_owned_error">Error: You already own that item!</string>
    <string name="tool_pack_purchase">Buy Tool Pack: </string>
    <string name="tool_pack_owned">Tool Pack: OWNED!</string>
    <string name="tool_pack_owned_error">Error: You already own the tool pack!</string>
    <string name="camera_tool_purchase">Buy Full Camera Tool: </string>
    <string name="camera_tool_owned">Full Camera Tool: OWNED!</string>
    <string name="camera_tool_owned_error">Error: You already own the camera tool!</string>
    <string name="portal_tool_purchase">Buy Portal Tool: </string>
    <string name="portal_tool_owned">Portal Tool: OWNED!</string>
    <string name="portal_tool_owned_error">Error: You already own the portal tool!</string>
    <string name="bullet" translatable="false">&#8226;</string>
    <string name="earth_world_desc_1">Uniform downwards gravity.</string>
    <string name="earth_world_desc_2">Average Earth atomspheric temperature.</string>
    <string name="space_world_desc_1">Dynamic gravity field determined by objects placed in the scene.</string>
    <string name="space_world_desc_2">Place astronomical objects: black, white, and curl holes.</string>
    <string name="space_world_desc_3">Box out null gravity zones.</string>
    <string name="tool_pack_desc_1">Adds several new tools allowing precise design.</string>
    <string name="tool_pack_desc_2">Rectangle, circle, triangle, line, dashed line, slingshot, and spray tools.</string>
    <string name="camera_tool_desc_1">Expands the camera tool to use ALL elements when setting the scene from the camera.</string>
    <string name="portal_tool_desc">Adds portal tool! Creates portals to teleport elements from one spot to another!</string>

    <string name="photo_tool">Set scene from camera</string>
    <string name="photo_tool_locked">Set scene from camera</string>
    <string name="camera_tool_limited">You are using the limited camera tool. Unlock from the main menu to generate scenes with all elements.</string>

    <string name="purchase_item">Unlock In-Game Item</string>
    <string name="billing_not_supported">Billing is not supported on this device. You will not be able to make purchases.</string>

    <string name="draw_rectangle">Draw Rectangle</string>
    <string name="draw_circle">Draw Circle</string>
    <string name="draw_line">Draw Line</string>
    <string name="slingshot">Slingshot Tool</string>
    <string name="spray">Spray Tool</string>
    <string name="draw_triangle">Draw Triangle</string>
    <string name="draw_dashed_line">Draw Dashed Line</string>

    <string name="ok">OK</string>
    <string name="iab_setup_failed">Failed to set up in-app billing: </string>
    <string name="iab_inventory_failed">Failed to get in-app inventory: </string>
    <string name="iab_purchase_failed">Error purchasing: </string>
    <string name="iab_purchase_failed_auth">Error purchasing, auth failure.</string>
    <string name="iab_inventory_success">Inventory refresh successful.</string>

    <string name="upgrading_save_files">Upgrading save files...</string>
    <string name="upgrading">Upgrading </string>
    <string name="permission_error">Please enable access to the camera, or the camera tool will not work.</string>

    
    <string name="portal">Add Portal</string>
    <string name="billing_product_not_supported">This product is not supported in the current version of the app. Please try upgrading.</string>
    <string name="billing_unavailable">Google Billing service unavailable. Please check your connection or try again later.</string>
    <string name="billing_error">Google Billing error.</string>
    <string name="billing_item_owned">Error: item already owned.</string>
    <string name="billing_item_unavailable">Error: item unavailable.</string>
    <string name="billing_user_cancelled">Purchase cancelled.</string>
    <string name="refund_policy">If you are unsatisfied with any feature, we are happy to offer a full refund. Please simply email idkjava@gmail.com with your order ID.</string>
</resources>
