<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:gravity="center_horizontal"
	android:background="@drawable/mm_layout_bg"
	android:orientation="vertical">

	<TextView
		android:id="@+id/select_world"
		android:text="@string/select_world"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="center_horizontal"
		android:layout_marginTop="100dip"
		android:layout_marginBottom="50dip"
		android:textColor="#444444" android:textSize="32sp"/>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<!-- Earth world -->
		<LinearLayout
			android:id="@+id/earth_world_button"
			android:clickable="true"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:background="@drawable/btn_mm"
			android:layout_marginLeft="10dip"
			android:layout_marginRight="10dip"
			android:padding="3dip">
			<ImageView
				android:layout_height="100dip"
				android:layout_width="100dip"
				android:src="@drawable/icon2"
				android:layout_marginRight="5dip"
				android:layout_margin="3dip"
				android:layout_gravity="center_vertical" />
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:layout_marginTop="5dip"
				android:layout_marginLeft="5dip">
				<TextView
					android:text="@string/earth_world"
					android:textSize="24sp"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:textColor="#ffffff"/>
				<TableLayout
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:textColor="#999999"
					android:layout_marginLeft="5dip">
					<TableRow>
						<TextView
							android:text="@string/bullet"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content" />
						<TextView
							android:text="@string/earth_world_desc_1"
							android:layout_marginLeft="3dip"
							android:layout_width="0dp"
							android:layout_weight="1"
							android:layout_height="wrap_content"
							android:singleLine="false"/>
					</TableRow>
					<TableRow
						android:layout_marginTop="1dip">
						<TextView
							android:text="@string/bullet"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content" />
						<TextView
							android:text="@string/earth_world_desc_2"
							android:layout_marginLeft="3dip"
							android:layout_width="0dp"
							android:layout_weight="1"
							android:layout_height="wrap_content"
							android:singleLine="false"/>
					</TableRow>
				</TableLayout>
			</LinearLayout>
		</LinearLayout>

		<!-- Space world -->
		<LinearLayout
			android:id="@+id/space_world_button"
			android:clickable="true"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:background="@drawable/btn_mm"
			android:layout_marginTop="20dip"
			android:layout_marginLeft="10dip"
			android:layout_marginRight="10dip"
			android:padding="3dip">
			<ImageView
				android:layout_height="100dip"
				android:layout_width="100dip"
				android:src="@drawable/icon2"
				android:layout_marginRight="5dip"
				android:layout_margin="3dip"
				android:layout_gravity="center_vertical" />
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:layout_marginTop="5dip"
				android:layout_marginLeft="5dip">
				<TextView
					android:text="@string/space_world"
					android:textSize="24sp"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:textColor="#ffffff" />

				<TableLayout
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:textColor="#999999"
					android:layout_marginLeft="5dip">
					<TableRow>
						<TextView
							android:text="@string/bullet"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content" />
						<TextView
							android:text="@string/space_world_desc_1"
							android:layout_marginLeft="3dip"
							android:layout_width="0dp"
							android:layout_weight="1"
							android:layout_height="wrap_content"
							android:singleLine="false"/>
					</TableRow>
					<TableRow
						android:layout_marginTop="1dip">
						<TextView
							android:text="@string/bullet"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content" />
						<TextView
							android:text="@string/space_world_desc_2"
							android:layout_marginLeft="3dip"
							android:layout_width="0dp"
							android:layout_weight="1"
							android:layout_height="wrap_content"
							android:singleLine="false"/>
					</TableRow>
					<TableRow
						android:layout_marginTop="1dip">
						<TextView
							android:text="@string/bullet"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content" />
						<TextView
							android:text="@string/space_world_desc_3"
							android:layout_marginLeft="3dip"
							android:layout_width="0dp"
							android:layout_weight="1"
							android:layout_height="wrap_content"
							android:singleLine="false"/>
					</TableRow>
				</TableLayout>
			</LinearLayout>
		</LinearLayout>

	</LinearLayout>
	
</LinearLayout>